# Learning-Space

./: .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.e2e.yml  docker-compose.yml  package-lock.json  package.json  railway.toml
.claude/: settings.json
.claude/agents/: implementer.md  pr-reviewer.md  security-reviewer.md
.claude/commands/: pm-dispatch.md  project-design.md  project-dispatch.md  project-plan.md  project-sync.md
.github/workflows/: ci.yml  fly-deploy.yml
apps/api/: .coverage  .dockerignore  .env.example  Dockerfile  Dockerfile.worker  Dockerfile.worker-playwright  README.md  alembic.ini  entrypoint.sh  fly.api.toml  fly.worker.toml  main.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 111e5b3d61af_change_tags_column_to_jsonb.py  2cc92e7b1ee7_seed_system_categories.py  3987688a4c94_add_resource_embeddings_table.py  3f9bf45c8ac2_add_conversations_and_messages_tables.py  4c41c5ec190a_add_fetch_tier_and_fetch_error_type_to_.py  8d7f1ec22b79_initial_migration_users_accounts_.py  9141aa9e76e4_update_resources_table_for_dev_013.py  9a9a6bde9933_fix_resource_embeddings_vector_dim_2560.py  a1b2c3d4e5f6_add_username_to_accounts.py  b3c4d5e6f7a8_rename_system_categories_to_full_names.py  c88b95c7269d_add_resources_search_idx.py  cc7c5f32e20b_add_last_login_at_to_accounts_table.py  d6c000ccd5ba_add_categories_table_with_system_seed_.py  e1f2a3b4c5d6_add_embedding_status_to_resources.py  ea78e7455c2f_add_processing_status_to_resources_table.py  f71b4e7e74fe_add_top_level_categories_to_resources_.py  fa8cb7e566ef_add_status_message_to_resources.py
apps/api/core/: __init__.py  config.py  database.py  deps.py  errors.py  jwt.py  queue.py  telemetry.py
apps/api/models/: __init__.py  account.py  category.py  conversation.py  database.py  resource.py  user.py
apps/api/routers/: agent.py  auth.py  categories.py  chat.py  graph.py  health.py  jobs.py  resources.py
apps/api/schemas/: __init__.py  agent.py  category.py  chat.py  conversation.py  graph.py  resource.py
apps/api/services/: __init__.py  agent_service.py  auth.py  embedding_service.py  graph_service.py  llm_client.py  llm_processor.py  neo4j_driver.py  oauth.py  playwright_fetcher.py  queue_service.py  resource_search_service.py  tiered_url_fetcher.py  url_fetcher.py
apps/api/tests/: conftest.py  test_agent_service.py  test_app.py  test_auth.py  test_auth_deps.py  test_auth_linking.py  test_auth_logout.py  test_auth_me.py  test_auth_unlinking.py  test_categories.py  test_chat.py  test_config.py  test_conversation_models.py  test_dispatch_api.py  test_embedding_service.py  test_errors.py  test_graph.py  test_graph_service.py  test_in_memory_queue.py  test_jobs_api.py  test_llm_client.py  test_llm_processor.py  test_llm_processor_categories.py  test_migration_categories_rename.py  test_migration_processing_status.py  test_migration_resource_embeddings.py  test_models.py  test_neo4j_driver.py  test_oauth_integration.py  test_oauth_scenarios.py  test_process_resource.py  test_queue.py  test_queue_fallback.py  test_resource_search_service.py  test_resources_create.py  test_resources_crud.py  test_resources_list.py  test_resources_search.py  test_schemas.py  test_tasks.py  (+5 more)
apps/api/tests/integration/: conftest.py  factories.py  test_fixtures.py  test_int_agent_search.py  test_int_auth.py  test_int_chat.py  test_int_graph.py  test_int_health.py  test_int_resources.py  test_int_search.py  test_int_worker.py  test_migration_resource_embeddings.py
apps/api/tests/mocks/: llm_mock.py  oauth_mock.py  provider_fetch_mock.py
apps/api/tests/unit/services/: test_graph_service.py
apps/api/workers/: __init__.py  dispatch_api.py  in_memory_queue.py  run_worker.py  tasks.py  worker.py
apps/web/: .env.example  jest.config.js  jest.setup.js  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
demo/: README.md
demo/001-first-user-journey/: README.md  screenshot.mjs
demo/002-account-and-resource-crud/: README.md  screenshot.mjs
demo/003-resource-pipeline-and-graph/: README.md  screenshot.mjs
demo/003-resource-processing-pipeline/: README.md
demo/004-knowledge-graph-exploration/: README.md
demo/005-ai-chat/: README.md
deploy/railway/: arq-worker.service  arq-worker.timer
docs/: design-category-taxonomy.md  design-changelog.md  design-changelogs.md  design-resource-fetching.md  design-search.md  design-twitter-integration.md  integration-test-design.md  queue-dual-mode-design.md  queue-enhancement-design.md  queue-enhancements-proposal.md  remove-redis-proposal.md  requirement-changelog.md  requirement-changelogs.md  requirements.md  technical-design.md  ux-requirements.md  ux-tech-spec.md
docs/ops/: flyio-deploy-guide.md  railway-deploy-guide.md  railway-redis-provisioning.md  rollout-strategy.md  vercel-deploy-guide.md
exec-plans/: current-plan.md
exec-plans/v1/: bdd-tasks-map.md  bdd-tasks.md  (+3 more)
memory/: bugs-tracker.md  build-tracker.md  dev-tracker.md  feedbacks.md  infra.md  ops-tracker.md  sprints.md  tech-debt-tracker.md  tech-debt.md  temp_result.md  ui-tracker.md
observability/: prometheus.yml
(+335 files in other folders)
