[project]
name = "api"
version = "0.1.0"
description = "Learning Space API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "pydantic-settings",
    "python-dotenv",
    "neo4j>=6.1.0",
    "greenlet>=3.3.2",
    "authlib>=1.6.9",
    "arq>=0.27.0",
    "httpx>=0.28.1",
    "anthropic>=0.85.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pip-audit",
    "bandit[toml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "routers", "services", "workers"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests requiring real databases (deselect with '-m not integration')",
    "int_ci: CI-safe integration tests (no external deps, mocked services)",
    "int_auth: Authentication and authorization integration tests",
    "int_resources: Resource management integration tests",
    "int_knowledge: Knowledge base integration tests",
    "int_sharing: Content sharing integration tests",
    "int_analytics: Analytics and reporting integration tests",
    "int_e2e: End-to-end tests requiring full stack",
    "int_performance: Performance and load integration tests",
    "int_security: Security-focused integration tests",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
# B105: false positives on OAuth token type strings ("bearer") and token endpoint URLs
skips = ["B105"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
]
