[project]
name = "api"
version = "0.1.0"
description = "Learning Space API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "alembic",
    "asyncpg",
    "pydantic-settings",
    "python-dotenv",
    "neo4j>=6.1.0",
    "greenlet>=3.3.2",
    "authlib>=1.6.9",
    "arq>=0.27.0",
    "httpx>=0.28.1",
    "playwright>=1.49.0",
    "anthropic>=0.85.0",
    "langgraph>=1.1.3",
    "langchain-anthropic>=1.4.0",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "groq>=0.10.0",
    "openai>=1.0.0",
    "requests>=2.33.0",
    "cryptography>=46.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
    "pip-audit",
    "bandit[toml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "models", "routers", "services", "workers"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: requires real PostgreSQL + Neo4j (run make infra-up first)",
    "int_health: INT-001-002: health check and error format",
    "int_auth: INT-003-012: OAuth login, account linking, /auth/me",
    "int_resources: INT-013-023: resource CRUD",
    "int_worker: INT-024-028: async worker pipeline",
    "int_graph: INT-029-035: knowledge graph update and exploration",
    "int_chat: INT-036-040: chat agent and conversation history",
    "int_e2e: Layer 3 Playwright E2E tests (full stack)",
    "int_deploy: INT-053-055: Docker, Helm, ArgoCD",
]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
# B105: false positives on OAuth token type strings ("bearer") and token endpoint URLs
skips = ["B105"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "respx>=0.22.0",
]
